--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,7 @@ background-position: calc(50% - 759px) calc(100% - 258px),calc(50% + 375px) calc
   padding: 52px 0 250px;
   display: flex;
   justify-content: space-between;
+
 }
 .banner__left {
   width: 635px;
@@ -174,7 +175,10 @@ width: 50px;
 height: 4px;
 background-color: var(--text-colar-rapture-blue);
 }
-.build {
+.build {background-image: url("../images/build.svg");
+  background-repeat: no-repeat;
+  background-position: calc(50% + 765px) calc(100% - 0px);
+
   background-color: var(--bg-colar-sacramento-state-greem);
 }
 .build-inner {
@@ -265,12 +269,12 @@ strong
   background-image: url("../images/delivering-bottom.svg");
   background-size: 200 200;
   background-repeat: no-repeat;
-  background-position: calc(50% + 860px) calc(50% + 400px);
+  background-position: calc(50% + 665px) calc(50% + 400px);
 }
 .site-stories-section::before{
   content: "";
   position: absolute; 
-  left: calc(50% - 960px);
+  left: calc(50% - 760px);
   top: 0;
   background-image: url("../images/delivering-top.svg");
   width: 147px;
