--- a/css/main.css
+++ b/css/main.css
@@ -743,7 +743,7 @@ top: -20px;
 .build-list__item--center p {
 margin: 0;
 }
-.build-inner__list {
+.contact-inner__list {
   padding: 40px 0 0 90px ;
 }
 .input {
